--- a/CSS - wstęp/css/style.css
+++ b/CSS - wstęp/css/style.css
@@ -54,3 +54,39 @@ div.child{
 input:focus {
     border: 9px, solid red;
 }
+/* pierwsze - ostatnie dziecko */
+ul :first-child a {
+    color: blue;
+}
+/* pierwszy ostatni element WAŻNE!!!*/
+
+ul :last-of-type a {
+    color: coral;
+}
+
+/* elementy które posiadają dany atrybut */
+[title] {
+    border: 5px, green solid;
+}
+
+/* selektor atrybutu o określonej wartośći */
+[title="pierwszy input"] {
+    border: solid 10px greenyellow;
+}
+
+/* selektor atrybutu posiadający wartość */
+[title~="drugi"]{
+    border: 10px dotted red
+}
+
+/* selektor atrybutu posiadający grupę znaków */
+input[title*='in']{
+    border: sienna solid 6px;
+}
+/* selektor atrybutów zaczynający się/kończący się ciągiem znaków */
+input[title^='pie']{
+    border: 6px solid fuchsia;
+}
+input[title$='put']{
+    border: 6px solid blue;
+}
